@@ -960,6 +960,7 @@ set(DISSECTOR_SRC
 	packet-netanalyzer.c
 	packet-netbios.c
 	packet-netdump.c
+	packet-netgear.c
 	packet-netflow.c
 	packet-netlink-generic.c
 	packet-netlink-netfilter.c
